2010-06-22  Eric Seidel  <eric@webkit.org>

        Unreviewed.  Add Tony Gentilcore now that he's a committer.

        * Scripts/webkitpy/common/config/committers.py:

2010-06-22  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Remove Gtk 64-Release bot from core since it's broken
        https://bugs.webkit.org/show_bug.cgi?id=41022

        This bot alone has been responsible for more than 72 hours of
        commit-queue blockage in the last week.  The bot is broken -- keeps
        losing its display server or similar.  Until the Gtk folks can fix the
        bot, we need to remove it from core.  The WebKit community can't keep
        it green as is.

        * Scripts/webkitpy/common/net/buildbot.py:
        * Scripts/webkitpy/common/net/buildbot_unittest.py:

2010-06-21  Dumitru Daniliuc  <dumi@chromium.org>

        Reviewed by Eric Seidel.

        Fix the Windows build.
        https://bugs.webkit.org/show_bug.cgi?id=40972

        * DumpRenderTree/win/ImageDiff.vcproj:

2010-06-21  Prasad Tammana  <prasadt@chromium.org>

        Reviewed by Darin Adler, Dmitry Titov.

        DumpRenderTree should allow tests with modal dialogs
        https://bugs.webkit.org/show_bug.cgi?id=35350

        * DumpRenderTree/LayoutTestController.cpp:
        (abortModalCallback):
        (LayoutTestController::staticFunctions):
        * DumpRenderTree/LayoutTestController.h:
        * DumpRenderTree/mac/LayoutTestControllerMac.mm:
        (LayoutTestController::abortModal):
        Add abortModal method to LayoutTestController and make it available from script.

        * DumpRenderTree/mac/UIDelegate.mm: Add support for showModalDialog.
        (-[UIDelegate modalWindowWillClose:]): Observer for NSWindowWillCloseNotifications to call
        abortModal from when modal window closes.
        (-[UIDelegate webViewRunModal:]): Delegate method for showModalDialog to run the modal loop.

2010-06-21  Simon Fraser  <simon.fraser@apple.com>
