@@ -1,3 +1,15 @@
+2010-06-22  Sam Magnuson  <smagnuson@netflix.com>
+
+        Reviewed by Shinichiro Hamaji.
+
+        Follow proper convention for variable declaration spacing.
+        https://bugs.webkit.org/show_bug.cgi?id=40724
+
+        Modified test so that 'int   a;' is not allowed.
+
+        * Scripts/webkitpy/style/checkers/cpp.py:
+        * Scripts/webkitpy/style/checkers/cpp_unittest.py:
+
 2010-06-22  Eric Seidel  <eric@webkit.org>
 
         Unreviewed.  Add Tony Gentilcore now that he's a committer.
